trunk/Archive2/30/bce4b544bf3aa8/output
main.cpp:11:23: error: expected '{' or ','
    foo() : (qux, bar)(create()) {
                      ^
1 error generated.
